- Fixed setting the this pointer on Windows
- Fixed hooking Windows thiscalls which use a vtable in a function
- Windows build files are now written to DynamicHooks/Build/

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,1 @@
-DynamicHooks.dir/*
-Debug/*
-Release/*
-CMakeFiles/*
-WIN32/*
-*vcxproj*
-*.sln
-ipch/*
-*.suo
-CMakeCache.txt
-*.sdf
-*.cmake
+Build/*
