Updated test cases
Added recursive CDECL test for Linux

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -50,4 +50,5 @@ If(WIN32)
     create_dynamic_hooks_test(test_ms_thiscall1 ms_thiscall1.cpp)
 Else()
     create_dynamic_hooks_test(test_gcc_cdecl1 gcc_cdecl1.cpp)
+    create_dynamic_hooks_test(test_gcc_cdecl2 gcc_cdecl2.cpp)
 Endif()
