--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -48,7 +48,10 @@ If(WIN32)
     create_dynamic_hooks_test(test_ms_cdecl1 ms_cdecl1.cpp)
     create_dynamic_hooks_test(test_ms_cdecl2 ms_cdecl2.cpp)
     create_dynamic_hooks_test(test_ms_thiscall1 ms_thiscall1.cpp)
+    create_dynamic_hooks_test(test_ms_thiscall2 ms_thiscall2.cpp)
 Else()
     create_dynamic_hooks_test(test_gcc_cdecl1 gcc_cdecl1.cpp)
     create_dynamic_hooks_test(test_gcc_cdecl2 gcc_cdecl2.cpp)
+    create_dynamic_hooks_test(test_gcc_thiscall1 gcc_thiscall1.cpp)
+    create_dynamic_hooks_test(test_gcc_thiscall2 gcc_thiscall2.cpp)
 Endif()
