Added calling convention "stdcall"
Added test cases for the new calling convention
Fixed test_gcc/ms_cdecl2 adding an two DATA_TYPE_INTs to the arguments
vector. They should only add one DATA_TYPE_INT

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,9 +10,10 @@ Project(DynamicHooks)
 # =============================================================================
 Set(CONVENTION_HEADERS
     conventions/x86MsCdecl.h
-    conventions/x86GccCdecl.h
-
     conventions/x86MsThiscall.h
+    conventions/x86MsStdcall.h
+    
+    conventions/x86GccCdecl.h
     conventions/x86GccThiscall.h
 )
 
@@ -29,6 +30,7 @@ Set(HEADER_FILES
 Set(CONVENTION_SOURCES
     conventions/x86MsCdecl.cpp
     conventions/x86MsThiscall.cpp
+    conventions/x86MsStdcall.cpp
 )
 
 Set(SOURCE_FILES
