--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -49,6 +49,8 @@ If(WIN32)
     create_dynamic_hooks_test(test_ms_cdecl2 ms_cdecl2.cpp)
     create_dynamic_hooks_test(test_ms_thiscall1 ms_thiscall1.cpp)
     create_dynamic_hooks_test(test_ms_thiscall2 ms_thiscall2.cpp)
+    create_dynamic_hooks_test(test_ms_stdcall1 ms_stdcall1.cpp)
+    create_dynamic_hooks_test(test_ms_stdcall2 ms_stdcall2.cpp)
 Else()
     create_dynamic_hooks_test(test_gcc_cdecl1 gcc_cdecl1.cpp)
     create_dynamic_hooks_test(test_gcc_cdecl2 gcc_cdecl2.cpp)
