--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: cpp
 compiler: gcc
 before_install:
     - sudo apt-get -qq update
-    - sudo apt-get -qq install gcc-multilib g++-multilib
+    - sudo apt-get -qq install gcc-multilib g++-multilib cmake
     
 before_script: sudo chmod +x build-unix-x86-rel.sh
 script: sudo ./build-unix-x86-rel.sh
