Add static AsmJit lib for Linux

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 # =============================================================================
 # >> REQUIREMENTS & PROJECT
 # =============================================================================
-CMake_Minimum_Required(VERSION 2.8)
+CMake_Minimum_Required(VERSION 3.5)
 Project(Tests)
 
 
@@ -18,6 +18,7 @@ macro (create_dynamic_hooks_test name)
         Else()
             Target_Link_Libraries(${name} $ENV{PWD}/../unix-x86/libDynamicHooks.a)
             Target_Link_Libraries(${name} $ENV{PWD}/../../src/thirdparty/AsmJit/lib/libAsmJit.a)
+            Target_Link_Libraries(${name} rt)
         Endif()
     endif()
 endmacro()
@@ -26,12 +27,13 @@ endmacro()
 # =============================================================================
 # >> COMPILER FLAGS
 # =============================================================================
-# Disable optimization in release mode
 If(WIN32)
+    # Disable optimization in release mode
     Set(CMAKE_CXX_FLAGS_RELEASE "/Od /Ob0")
+Else()
+    Set(CMAKE_CXX_FLAGS "-m32")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lrt")
 Endif()
-
-Set(CMAKE_CXX_FLAGS "-m32")
 
 
 # =============================================================================
